works_fix - spacing, Title letter space, boxes more rectangular, correct font family, button wider
news_fix - add letter space to the title, the item more rectangular, badge coded add space

feature_fix - title bigger, correct font family, reduce space, bg parallax

contact_fix - add width, correct font family, allign icons

contact_fix - wider buttons

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -26,9 +26,9 @@
     }
 
     &--contact {
-      width: 30px;
-      right: 27px;
-      top: 23px;
+      width: 40px;
+      right: 75px;
+      top: 34px;
       position: absolute;
     }
   }
@@ -36,9 +36,10 @@
   &__title {
     &--contact {
       font-weight: $fontweight-bold;
-      font-size: $font-small-half;
+      font-size: $font-med;
       text-transform: uppercase;
-      font-family: $ff-MicrosoftYahei
+      font-family: $ff-MicrosoftYahei;
+      padding: 2px 0;
     }
   }
 
@@ -67,7 +68,7 @@
 
     &--contact {
       color: $white-color;
-      font-size: $font-small;
+      font-size: $font-small-half;
       font-weight: $fontweight-regular;
       font-family: $ff-yugothiclight;
     }
@@ -95,14 +96,16 @@
 
   //Contact Btn
   &--contact {
-    padding: 20px 80px 20px 40px;
+    padding: 27px 93px;
+    width: 46%;
     color: $white-color;
     position: relative;
     border-radius: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     background: $primary-color;
+    border: none;
+    letter-spacing: 3px;
 
     &-grey {
       background: $light-grey;
