--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -1,6 +1,6 @@
 .contacts {
   padding: 50px 0 30px;
-  border-bottom: solid 1px $primary-color;
+  border-bottom: solid 2px $primary-color;
 
   &__btn-wrapper {
     @include wrapper__a;
